etl-api/src/data/snapshots/etl_api__data__destinations__tests__destination_config_json_deserialization.snap
---
source: etl-api/src/data/destinations.rs
expression: deserialized.unwrap()
---
BigQuery {
    project_id: "project-id",
    dataset_id: "dataset-id",
    service_account_key: SerializableSecretString(
        SecretBox<str>([REDACTED]),
    ),
    max_staleness_mins: Some(
        42,
    ),
    max_concurrent_streams: 1,
}
