etl-api/src/data/snapshots/etl_api__data__destinations__tests__destination_config_json_serialization.snap
---
source: etl-api/src/data/destinations.rs
expression: config
---
{
  "big_query": {
    "project_id": "project-id",
    "dataset_id": "dataset-id",
    "service_account_key": "service-account-key",
    "max_staleness_mins": 42,
    "max_concurrent_streams": 1
  }
}
